--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,23 @@
-html, body{
+html, body {
     margin: 0;
     height: 100%;
 }
 
 body {
     font-family: 'OpenSans', sans-serif;
-    background-image: linear-gradient(to top right, rgb(72,90,199), rgb(185,88,189));
+    background-image: linear-gradient(to top right, rgb(72, 90, 199), rgb(185, 88, 189));
     color: #2d2d2d;
 }
 
-a{
-    cursor:pointer;
+a {
+    cursor: pointer;
 }
 
-input{
-    box-sizing:border-box;
+input {
+    box-sizing: border-box;
 }
 
-.fa{
+.fa {
     cursor: pointer;
 }
 
@@ -25,15 +25,17 @@ input{
 ::-webkit-scrollbar {
     width: 10px;
 }
+
 ::-webkit-scrollbar-track {
     background: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
     background: #b7b7b7;
 }
 
 /*CSS Code Here*/
-.dashboard-container{
+.dashboard-container {
     width: 75%;
     height: 70%;
     margin: 0 auto;
@@ -44,75 +46,75 @@ input{
     top: 100px;
 }
 
-#user-pfp{
+#user-pfp {
     width: 60px;
     height: 60px;
     border-radius: 50%;
     margin-right: 15px;
 }
 
-.user-data{
+.user-data {
 
 }
 
-.dashboard-top{
+.dashboard-top {
     display: flex;
     border-bottom: 1px solid #e2e2e2;
     padding-bottom: 20px;
 }
 
-.user-options-icon{
+.user-options-icon {
     float: right;
     margin-left: auto;
 }
 
-.dashboard-main{
+.dashboard-main {
     height: 100%;
     padding-top: 20px;
     display: flex;
 }
 
-.A{
+.A {
     display: inline-block;
     width: 15%;
     height: 85%;
 }
 
-.B{
+.B {
     display: inline-block;
-    width: 66%;
+    width: 70%;
     height: 85%;
     padding: 0 20px;
 }
 
-.C{
+.C {
     display: inline-block;
     width: 15%;
     height: 85%;
 }
 
-.server-list{
+.server-list {
     border-right: 1px solid #e2e2e2;
     overflow-x: scroll;
     height: 100%;
     padding-right: 20px;
 }
 
-.message-center{
+.message-center {
     display: inline-block;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 20px;
 }
 
-.users-list{
+.users-list {
     border-left: 1px solid #e2e2e2;
     overflow-x: scroll;
     height: 100%;
     padding-left: 20px;
 }
 
-.server-row{
+.server-row {
     padding: 5px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -120,33 +122,33 @@ input{
     cursor: pointer;
 }
 
-.server-row:not(.selected-server):hover{
+.server-row:not(.selected-server):hover {
     background-color: #e8e8e8;
     border: 1px solid #dadada;
 }
 
-.server-img{
+.server-img {
     display: block;
 }
 
-.server-img > img{
+.server-img > img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
 
-.subscribed-user-img{
+.subscribed-user-img {
     display: inline-block;
     text-align: left;
 }
 
-.subscribed-user-img img{
+.subscribed-user-img img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
 
-.subscribed-user-name{
+.subscribed-user-name {
     display: inline-block;
     vertical-align: middle;
     padding: 12px 0;
@@ -156,13 +158,13 @@ input{
     text-overflow: ellipsis;
 }
 
-.server-name{
+.server-name {
     white-space: nowrap;
     text-overflow: ellipsis;
-    overflow:  hidden;
+    overflow: hidden;
 }
 
-.user-row{
+.user-row {
     padding: 5px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -171,26 +173,26 @@ input{
     display: flex;
 }
 
-.user-row:hover{
+.user-row:hover {
     background-color: #e8e8e8;
     border: 1px solid #dadada;
 }
 
-.add-server{
+.add-server {
 
 }
 
-.fa-plus-circle{
+.fa-plus-circle {
     color: #57d044;
     font-size: 46px;
 }
 
-.fa-minus-circle{
+.fa-minus-circle {
     color: #ff5f58;
     font-size: 46px;
 }
 
-.servers-container{
+.servers-container {
     width: 75%;
     height: 70%;
     margin: 0 auto;
@@ -201,23 +203,23 @@ input{
     top: 100px;
 }
 
-.servers-list{
+.servers-list {
     overflow-y: scroll;
     padding-top: 20px;
 }
 
-.server-subscribe{
+.server-subscribe {
     float: right;
     bottom: 40px;
     position: relative;
 }
 
-.messages-list{
+.messages-list {
     width: 100%;
     height: 80%;
 }
 
-.messages{
+.messages {
     width: 100%;
     height: 93%;
     padding-top: 20px;
@@ -225,29 +227,29 @@ input{
     padding-right: 20px;
 }
 
-.send-message-container{
+.send-message-container {
     width: 100%;
     border-top: 1px solid #dadada;
     padding-top: 20px;
 }
 
-.send-message-input{
+.send-message-input {
     width: 100%;
     border: 1px solid #dadada;
     outline: none;
     background-color: white;
     font-size: 17px;
     line-height: 23px;
-    border-radius:  10px;
+    border-radius: 10px;
     height: 35px;
     padding-left: 10px;
 }
 
-.send-message-input::placeholder{
+.send-message-input::placeholder {
     color: #bcbcbc;
 }
 
-.server-info{
+.server-info {
     text-align: center;
     border-bottom: 1px solid #dadada;
     padding-bottom: 20px;
@@ -255,21 +257,21 @@ input{
     height: 10%;
 }
 
-.server-info-name{
+.server-info-name {
     font-size: 20px;
     font-weight: bold;
 }
 
-.server-info-description{
+.server-info-description {
     font-size: 18px;
 }
 
-.selected-server{
+.selected-server {
     background-color: #e6ebff;
     border: 1px solid #dadada;
 }
 
-.message-row{
+.message-row {
     background-color: white;
     padding: 10px;
     border-radius: 5px;
@@ -277,38 +279,96 @@ input{
     margin-bottom: 10px;
 }
 
-.left-message{
+.left-message {
     float: left;
 }
 
-.right-message{
+.right-message {
     float: right;
 }
 
-.message-profile-image{
+.message-profile-image {
     border-radius: 50%;
     width: 30px;
     height: 30px;
     margin-right: 10px;
 }
 
-.message-content{
+.message-content {
     color: #414141;
 }
 
-.message-header{
+.message-header {
     color: #aeaeae;
     font-size: 14px;
     margin-bottom: 5px;
 }
 
-.message-img, .message-text{
+.message-img, .message-text {
     display: inline-block;
     height: 100%;
 }
 
-.message-img{
+.message-text{
+    max-width: 90%;
+    width: 90%;
+    word-wrap: break-word;
+}
+
+.message-img {
     float: left;
+}
+
+.dropdown-menu {
+    visibility: hidden;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    float: right;
+    right: 10px;
+    top: 65px;
+    border: 1px solid #a3aeff;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.user-options-icon:hover .dropdown-menu{
+    visibility: visible;
+}
+
+.dropdown-menu div {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    cursor: pointer;
+}
+
+.dropdown-menu div:not(:last-child){
+    border-bottom: 1px solid gray;
+}
+
+.dropdown-menu div:hover {
+    background-color: #f1f1f1;
+    border-radius:  5px;
+}
+
+.message-right{
+    float:right;
+}
+
+.manage-message{
+    font-size: 20px;
+}
+
+.delete-message i{
+    color: #ff6262;
+}
+.edit-message i{
+    color: #00b4ff;
 }
 
 
