--- a/src/app/user-popup/user-popup.component.css
+++ b/src/app/user-popup/user-popup.component.css
@@ -1,4 +1,50 @@
+.mat-dialog-container{
+    padding: 0 !important;
+}
+
 .user-popup{
-    width: 40%;
-    height: 40%;
+    width: 200px;
+    height: 300px;
+}
+
+.user-popup-top{
+    text-align:center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #dadada;
+}
+
+.user-popup-img-container{
+    margin-bottom: 20px;
+}
+
+.user-popup-img-container > img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.user-popup-bottom{
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.user-popup-servers{
+    margin-top: 20px;
+    overflow:auto;
+    white-space: nowrap;
+}
+
+.user-popup-server{
+    display: inline-block;
+}
+
+.user-popup-server:not(:last-child){
+    margin-right: 10px;
+}
+
+.user-popup-server img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
