--- a/src/styles.css
+++ b/src/styles.css
@@ -252,9 +252,9 @@ input {
 .server-info {
     text-align: center;
     border-bottom: 1px solid #dadada;
-    padding-bottom: 25px;
     color: #555555;
     height: 10%;
+    padding-bottom: 30px;
 }
 
 .server-info-name {
@@ -439,3 +439,6 @@ input {
 
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
