--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -15,11 +15,11 @@
         </div>
 
         <div class="login-form-field">
-            <input type="text" name="FirstName" placeholder="Email" ngModel required [(ngModel)]="currentUser.FirstName">
+            <input type="text" name="FirstName" placeholder="First Name" ngModel required [(ngModel)]="currentUser.FirstName">
         </div>
 
         <div class="login-form-field">
-            <input type="text" name="LastName" placeholder="Email" ngModel required [(ngModel)]="currentUser.LastName">
+            <input type="text" name="LastName" placeholder="Last Name" ngModel required [(ngModel)]="currentUser.LastName">
         </div>
 
         <div class="login-form-field">
