--- a/src/app/user-popup/user-popup.component.html
+++ b/src/app/user-popup/user-popup.component.html
@@ -8,8 +8,9 @@
     </div>
 
     <div class="user-popup-bottom">
-        {{selectedUser.FirstName + " " + selectedUser.LastName}}
+        <div>{{selectedUser.FirstName + " " + selectedUser.LastName}}</div>
 
+        <div>Subscribed Servers</div>
         <div class="user-popup-servers">
             <div *ngFor="let server of selectedUser.SubscribedServers" class="user-popup-server">
                 <img src="{{server.ServerImage}}">
